// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`put effect can trigger another effect 1`] = `
<div
  onClick={[Function]}
>
  <div>
    1
  </div>
</div>
`;

exports[`useFetch effect can combine with a custom model 1`] = `
<div
  onClick={[Function]}
>
  <div>
    target
  </div>
</div>
`;
